<resources>
    <string name="app_name">HappyPet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_menu">רשימת כלבים משוטטים</string>
    <string name="report_dog">דווח על כלב משוטט</string>
    <string name="action_login">מתנדב</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_v">התחברות מתנדב</string>
    <string name="title_activity_reported_dogs">כלבים משוטטים</string>
    <string name="title_activity_report_for_dog">דוח על כלב</string>
    <string name="title_activity_report_view">עמוד דיווח</string>
    <string name="reportAddress">כתובת דיווח</string>
    <string name="title_activity_add_or_update">addOrUpdate</string>
    <string name="title_activity_update_or_delet">UpdateOrDelet</string>
    <string name="title_activity_update_delet_main">UpdateDelet</string>
    <string name="title_activity_about_us">עלינו</string>
    <string name="dogs_for_adopt">כלבים לאימוץ</string>
    <string name="title_activity_volenteer">מתנדב</string>
    <string name="loged_out">התנתק</string>
    <string name="title_activity_search_dog">חיפוש כלב</string>
    <string name="title_activity_adopt_dog">אימוץ</string>
    <string name="title_activity_adopt">אימוץ</string>
    <string-array name="dogs_type">
        <item>בחר סוג</item>
        <item>פודל</item>
        <item>פינצר</item>
        <item>בולדוג</item>
    </string-array>
    <string-array name="dogs_size">
        <item>בחר גודל</item>
        <item>גדול</item>
        <item>בינוני</item>
        <item>קטן</item>
    </string-array>
    <string-array name="dogs_area">
        <item>בחר אזור</item>
        <item>מרכז</item>
        <item>דרום</item>
        <item>צפון</item>
    </string-array>
</resources>
