<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:icon="@drawable/ic_user"
        app:showAsAction="withText|ifRoom"/>
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search" android:title=" "
        app:showAsAction="withText|ifRoom"/>
    <item android:id="@+id/adopt_dogs_list" android:icon="@drawable/ic_dogs_house" android:title="@string/dogs_for_adopt"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/report_dog" android:icon="@mipmap/ic_importent" android:title="@string/report_dog"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/about_us_page" android:icon="@mipmap/ic_foot_print" android:title="@string/title_activity_about_us"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />

</menu>

